--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "https-proxy-agent": "^7.0.2",
+    "http-proxy-agent": "^7.0.0",
     "node-fetch": "^2.7.0"
   },
   "engines": {
