--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "http-proxy-agent": "^7.0.0",
-    "node-fetch": "^2.7.0"
+    "express": "^4.18.2"
   },
   "engines": {
     "node": ">=18.0.0"
