--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "tor2web-proxy",
+  "name": "tor-proxy",
   "version": "1.0.0",
-  "description": "Fast Tor2Web proxy for specific onion service",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "express": "^4.18.2",
+    "axios": "^1.6.0",
+    "https-proxy-agent": "^7.0.2"
   }
 }
