--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
   "dependencies": {
     "express": "^4.18.2",
     "axios": "^1.6.0",
-    "https-proxy-agent": "^7.0.2"
+    "http-proxy-agent": "^7.0.2"
   }
 }
